welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:7: error: type mismatch;
 found   : Unit
 required: Boolean
 	if (isMom == true && isMorning == true ) {
        ^answerCell:5: error: type mismatch;
 found   : Unit
 required: Boolean
 	} else if (isMom == true && isMorning == true ) {
               ^